--- a/Day2/react/package.json
+++ b/Day2/react/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mdx-js/rollup": "^3.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "vite-plugin-mdx": "^3.6.0",
     "vite-tsconfig-paths": "^4.3.2"
   },
   "devDependencies": {
@@ -21,11 +23,17 @@
     "@typescript-eslint/eslint-plugin": "^7.13.1",
     "@typescript-eslint/parser": "^7.13.1",
     "@vitejs/plugin-react": "^4.3.1",
-    "eslint": "^8.57.0",
+    "eslint": "^9.6.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
     "typescript": "^5.2.2",
     "vite": "^5.3.1",
-    "vite-plugin-lightningcss": "^0.0.5"
+    "vite-plugin-checker": "^0.6.4",
+    "vite-plugin-env-compatible": "^2.0.1",
+    "vite-plugin-lightningcss": "^0.0.5",
+    "vite-plugin-pwa": "^0.20.0",
+    "vite-plugin-svgr": "^4.2.0",
+    "vite-plugin-windicss": "^1.9.3",
+    "windicss": "^3.5.6"
   }
 }
