--- a/Day3/tanstack-api/.eslintrc.json
+++ b/Day3/tanstack-api/.eslintrc.json
@@ -1,3 +1,10 @@
 {
-  "extends": "next/core-web-vitals"
+  "parser": "@babel/eslint-parser",
+  "extends": ["next/core-web-vitals", "next"],
+  "parserOptions": {
+    "requireConfigFile": false,
+    "babelOptions": {
+      "presets": ["next/babel"]
+    }
+  }
 }
