--- a/Day3/tanstack-api/package.json
+++ b/Day3/tanstack-api/package.json
@@ -18,12 +18,14 @@
     "uuid": "^10.0.0"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.24.8",
     "@faker-js/faker": "^8.4.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/uuid": "^10.0.0",
-    "eslint": "^8",
+    "babel-preset-next": "link:babel-preset-next",
+    "eslint": "^8.57.0",
     "eslint-config-next": "14.2.4",
     "typescript": "^5"
   }
