--- a/Day3/swr-api/package.json
+++ b/Day3/swr-api/package.json
@@ -21,6 +21,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/uuid": "^10.0.0",
+    "axios": "^1.7.2",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "typescript": "^5"
