--- a/Day3/tanstack-api/package.json
+++ b/Day3/tanstack-api/package.json
@@ -24,6 +24,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/uuid": "^10.0.0",
+    "axios": "^1.7.2",
     "babel-preset-next": "link:babel-preset-next",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.4",
