--- a/Day5/redux/tsconfig.json
+++ b/Day5/redux/tsconfig.json
@@ -22,6 +22,12 @@
     "incremental": true,
     "plugins": [{ "name": "next" }]
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "app/fearures/user/constans"
+  ],
   "exclude": ["node_modules"]
 }
