--- a/X/.prettierrc
+++ b/X/.prettierrc
@@ -1,6 +1,13 @@
 {
-  "useTabs": true,
-  "singleQuote": true,
   "plugins": ["@trivago/prettier-plugin-sort-imports"],
-  "importOrder": ["^react$", "^[./]"]
+  "importOrder": [
+    "^@mui/(.*)$",
+    "^@untitled-ui/(.*)$",
+    "^react",
+    "^src/(.*)$",
+    "<THIRD_PARTY_MODULES>",
+    "^[./]"
+  ],
+  "importOrderSeparation": true,
+  "importOrderSortSpecifiers": true
 }
