--- a/X/.prettierrc
+++ b/X/.prettierrc
@@ -9,5 +9,6 @@
     "^[./]"
   ],
   "importOrderSeparation": true,
-  "importOrderSortSpecifiers": true
+  "importOrderSortSpecifiers": true,
+  "semi": false
 }
