--- a/X/package.json
+++ b/X/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "classnames": "^2.5.1",
+    "dayjs": "^1.11.12",
     "eslint-plugin-import": "^2.29.1",
     "next": "14.2.5",
     "react": "^18",
