--- a/X/package.json
+++ b/X/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@faker-js/faker": "^8.4.1",
     "classnames": "^2.5.1",
     "dayjs": "^1.11.12",
     "eslint-plugin-import": "^2.29.1",
