--- a/X/package.json
+++ b/X/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "mock": "npx tsx watch ./src/mocks/http.ts"
   },
   "dependencies": {
     "@faker-js/faker": "^8.4.1",
@@ -14,19 +15,32 @@
     "dayjs": "^1.11.12",
     "eslint-plugin-import": "^2.29.1",
     "next": "14.2.5",
+    "next-auth": "^5.0.0-beta.11",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-intersection-observer": "^9.5.2"
   },
   "devDependencies": {
+    "@mswjs/http-middleware": "^0.10.1",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@typescript-eslint/parser": "^8.0.0",
+    "cors": "^2.8.5",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "eslint-import-resolver-typescript": "^3.6.1",
+    "express": "^4.19.2",
+    "msw": "^2.4.1",
     "prettier": "^3.3.3",
     "typescript": "^5"
+  },
+  "msw": {
+    "workerDirectory": [
+      "public"
+    ]
   }
 }
