--- a/X/package.json
+++ b/X/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@faker-js/faker": "^8.4.1",
+    "@tanstack/react-query": "5",
     "classnames": "^2.5.1",
     "dayjs": "^1.11.12",
     "eslint-plugin-import": "^2.29.1",
+    "graphql": "^16.9.0",
     "next": "14.2.5",
     "next-auth": "^5.0.0-beta.11",
     "react": "^18",
@@ -22,6 +24,7 @@
   },
   "devDependencies": {
     "@mswjs/http-middleware": "^0.10.1",
+    "@tanstack/react-query-devtools": "5",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
