--- a/X/package.json
+++ b/X/package.json
@@ -20,7 +20,8 @@
     "next-auth": "^5.0.0-beta.11",
     "react": "^18",
     "react-dom": "^18",
-    "react-intersection-observer": "^9.5.2"
+    "react-intersection-observer": "^9.5.2",
+    "react-textarea-autosize": "^8.5.4"
   },
   "devDependencies": {
     "@mswjs/http-middleware": "^0.10.1",
