--- a/X/package.json
+++ b/X/package.json
@@ -16,6 +16,7 @@
     "dayjs": "^1.11.12",
     "eslint-plugin-import": "^2.29.1",
     "graphql": "^16.9.0",
+    "immer": "^10.1.1",
     "next": "14.2.5",
     "next-auth": "^5.0.0-beta.11",
     "react": "^18",
