--- a/X/package.json
+++ b/X/package.json
@@ -22,7 +22,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-intersection-observer": "^9.5.2",
-    "react-textarea-autosize": "^8.5.4"
+    "react-textarea-autosize": "^8.5.4",
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
     "@mswjs/http-middleware": "^0.10.1",
